--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,13 +47,7 @@ jobs:
       FATS_DIR: $(fatsDir)
       FATS_REFSPEC: $(fatsRefspec)
 
-  - bash: |
-      kubectl get deployments,services,pods --all-namespaces || true
-      echo "FAILING PODS:"
-      kubectl get pods --all-namespaces --field-selector=status.phase!=Running \
-      | tail -n +2 | awk '{print "-n", $1, $2}' | xargs -L 1 kubectl describe pod || true
-      echo "NODE:"
-      kubectl describe node || true
+  - bash: ci/diagnostics.sh
     condition: failed()
     displayName: 'diagnostics'
 
@@ -134,13 +128,7 @@ jobs:
       FATS_DIR: $(fatsDir)
       FATS_REFSPEC: $(fatsRefspec)
 
-  - bash: |
-      kubectl get deployments,services,pods --all-namespaces || true
-      echo "FAILING PODS:"
-      kubectl get pods --all-namespaces --field-selector=status.phase!=Running \
-      | tail -n +2 | awk '{print "-n", $1, $2}' | xargs -L 1 kubectl describe pod || true
-      echo "NODE:"
-      kubectl describe node || true
+  - bash: ci/diagnostics.sh
     condition: failed()
     displayName: 'diagnostics'
 
