adding new function and application builders

--- a/cnab/app/kab/manifest.yaml
+++ b/cnab/app/kab/manifest.yaml
@@ -126,4 +126,8 @@ spec:
     path: https://raw.githubusercontent.com/knative/serving/v0.5.1/third_party/config/build/clusterrole.yaml
   - name: riff-build-template
     path: https://storage.googleapis.com/projectriff/riff-buildtemplate/riff-cnb-clusterbuildtemplate-0.2.0.yaml
+  - name: riff-application-build-template
+    path: https://storage.googleapis.com/projectriff/riff-buildtemplate/riff-application-clusterbuildtemplate.yaml
+  - name: riff-function-build-template
+    path: https://storage.googleapis.com/projectriff/riff-buildtemplate/riff-function-clusterbuildtemplate.yaml
 status: {}
