--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@
 variables:
   duffleVersion: '0.1.0-ralpha.5%2Benglishrose'
   fatsDir: '$(system.defaultWorkingDirectory)/../fats'
-  fatsRefspec: a224572f2f9685de7d7312f4d6c7e2892699fdd5 # projectriff/fats master as of 2019-05-01
+  fatsRefspec: c7d87aedeac8772520459a527329976d6269fedd # projectriff/fats master as of 2019-05-31
 
 jobs:
 - job: build
@@ -70,7 +70,7 @@ jobs:
         imageName: ubuntu-16.04
         qualifier: minikube
         cluster: minikube
-        registry: dockerhub
+        registry: docker-daemon
       gke:
         imageName: ubuntu-16.04
         qualifier: gke
@@ -133,6 +133,7 @@ jobs:
     displayName: 'diagnostics'
 
   - bash: |
+      duffle uninstall myriff --credentials myk8s
       source $(fatsDir)/cleanup.sh
     env:
       DOCKER_USERNAME: '$(DockerUsername)'
